@@ -83,6 +83,7 @@ To=maverick
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
+Pockets=security,updates,proposed,backports
 ;AllowThirdParty=False
 
 ;[PreRequists]
