@@ -21,6 +21,7 @@ To=gutsy
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
+Pockets=security,updates,proposed,backports
 
 [PreRequists]
 Packages=release-upgrader-apt,release-upgrader-dpkg
