@@ -2,6 +2,10 @@ update-manager (1:0.141) UNRELEASED; urgency=low
 
   * UpdateManager/backend/__init__.py:
     - switch to aptdaemon as install backend by default
+  * DistUpgrade/DistUpgradeController.py:
+   - use pockets from DistUpgrade.cfg instead of hard-coding them
+  * tests/test_sources_list.py:
+    - update tests
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 11:23:57 +0200
 
